# gainsight-community-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
