[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gainsight-community-mcp"
version = "0.1.0"
description = "A third-party MCP server for Gainsight Customer Communities (formerly inSided)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
